Fixed behaviour when stretching div

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,8 @@ figcaption {
 .playing-image {
 	position: absolute;
 	top: 5px;
-	left: 250px;
+	right: 13px;
+	/* left: 250px; */
 }
 
 .hover-button {
@@ -128,7 +129,7 @@ figcaption {
 	width: 15px;
 	position: absolute;
 	top: -3px;
-	left: 320px;
+	right: -3px;
 	transition: 0.1s;
 	background-color: inherit;
 	cursor: pointer;
@@ -136,7 +137,7 @@ figcaption {
 }
 
 .close-button:hover {
-	left: 315px;
+	right: 2px;
 	height: 20px;
 	width: 20px;
 }
@@ -289,7 +290,15 @@ figcaption {
 		position: absolute;
 		left: 0px;
 		top: 0px;
-		width: 350px;
+		width: 100%;
+		height: 110px;
+	}
+
+	.close-wrapper-controller {
+		position: absolute;
+		left: 0px;
+		top: 0px;
+		width: 100%;
 		height: 110px;
 	}
 
@@ -319,6 +328,15 @@ figcaption {
 	.search {
 		display: flex;
 		width: 100% !important;
+	}
+
+	.slider-container {
+		margin: auto;
+		margin-top: 10px;
+		min-width: 310px;
+		width: 90%;
+		top: 78px;
+		position: absolute;
 	}
 
 	.soundboard {
